--- a/htmls/signup.html
+++ b/htmls/signup.html
@@ -8,9 +8,8 @@
   <script src="../js/jquery.min.js"></script>
   <script src="../js/bootstrap/popper.min.js"></script>
   <script src="../js/bootstrap/bootstrap.min.js"></script>
-  <script src="../js/generic.js"></script> 
   <link rel="stylesheet"  href="../css/login.css">
-   
+   <script src="../js/generic.js"></script> 
 </head>
 <body>
     <div class='d-flex text-center justify-content-center' id="login-header">
@@ -27,14 +26,13 @@
             <label for="pwd">Password:</label>
             <input type="password" class="form-control" id="pwd">
           </div>
-          <div class="form-group form-check">
-            <label class="form-check-label">
-              <input class="form-check-input" type="checkbox"> Remember me
-            </label>
+          <div class="form-group">
+            <label for="pwd">Confirm:</label>
+            <input type="password" class="form-control" id="pwd">
           </div>
            
-          <button  type="submit" class="btn btn-primary float-right">Sign In</button>
-        <button type="button" class="btn btn-info float-right mr-2" title="registry new account :)" data-toggle="tooltip" data-placement="bottom" onclick="tnb.redirect(this)">Sign Up</button>
+          <button  type="submit" class="btn btn-primary float-right">Sign Up</button>
+        <button type="button" class="btn btn-info float-right mr-2" title="I have an account :)" data-toggle="tooltip" data-placement="bottom" onclick="tnb.redirect(this)">Sign In</button>
         </form>
     </div>
 </body>
